--- a/REST API Report/Analysis.tex
+++ b/REST API Report/Analysis.tex
@@ -1,57 +1,47 @@
 \section{Analysis}
 
-\subsection{\textcolor{red}{RQ1: Is there a relation between design- and linguistic quality in RESTful APIs?}}
+\subsection{RQ1: Is there a relation between design- and linguistic quality in RESTful APIs?}
 
-\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
+No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.
 
-\textcolor{red}{Based on the Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test were a combination of antipatterns, patterns, and a mix of both.} \textcolor{blue}{The p-value was low indicating a significant relation.}
+Based on the Chi square test there is a relationship between design and linguistic quality in REST APIs. The Chi square test were a combination of antipatterns, patterns, and a mix of both. The p-value was low indicating a significant relation.
 
-\subsection{\textcolor{red}{RQ1.1: Is there a relation between design and linguistic antipatterns in RESTful APIs?}}
+\subsection{RQ1.1: Is there a relation between design and linguistic antipatterns in RESTful APIs?}
 
-\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
+No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.
 
-\textcolor{red}{
+
 There is a moderate positive relation between the linguistic antipattern CRUDy URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurrences of one of these aspect if the other is frequently occurring. 
-}
 
-\textcolor{red}{
 All the other pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
-}
 
-\subsection{\textcolor{red}{RQ1.2: Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?}}
 
-\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
+\subsection{RQ1.2: Is there a relation between design patterns and linguistic antipatterns in RESTful APIs?}
 
-\textcolor{red}{No moderate or strong relations were found.}
+No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.
 
-\textcolor{red}{
+No moderate or strong relations were found.
+
+
 All the pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
-}
 
-\textcolor{red}{
 This can be explained by the fact that both moderate relations found in our result involved the design antipattern Misusing Cookies and since there is no corresponding design pattern for that design antipattern \cite{design}.
-}
 
-\subsection{\textcolor{red}{RQ1.3: Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?}}
 
-\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
+\subsection{RQ1.3: Is there a relation between design antipatterns and linguistic patterns in RESTful APIs?}
 
-\textcolor{red}{
+No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.
+
 There is a moderate negative relation between the linguistic pattern Verbless URIs and the design antipattern Misusing Cookies. This means that our result indicates a heightened likelihood of occurances of one of these aspects if the other is frequently occuring. Verbless URIs is the corresponding linguistic pattern of the linguistic antipattern CRUDy URIs. 
-}
 
-\textcolor{red}{
 All the other pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
-}
 
-\subsection{\textcolor{red}{RQ1.4: Is there a relation between design- and linguistic patterns in RESTful APIs?}}
+\subsection{RQ1.4: Is there a relation between design- and linguistic patterns in RESTful APIs?}
 
-\textcolor{red}{No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.}
+No such conclusion can be drawn from our research. This is because our results from the SARA program are unreliable.
 
-\textcolor{red}{No moderate or strong relations were found.}
+No moderate or strong relations were found.
 
-\textcolor{red}{
 The explanation for this is the same as for RQ1.2. Since there is no corresponding design pattern for the design antipattern Misusing cookies, all the pairwise comparisons resulted in relations that were weak, negligible or non-applicable. 
-}
 
 \newpage
