--- a/REST API Report/Implementation.tex
+++ b/REST API Report/Implementation.tex
@@ -27,7 +27,7 @@ The linguistic program has been further developed to get a more accurate result 
 \texttt{/v3/{agreementId}/consumption/districtheat/data}
 
 \vspace{2mm}
-With our improvement, the program can detect words written together and treat them as separate nodes. If a word is not found in the dictionary then this code block is executed to check if the word might consist of more than one word. The two new words must make use of all the characters of the old word. \textcolor{red}{See algorithm \ref{Find words written together algorithm} for the algorithm used for this improvement.}
+With our improvement, the program can detect words written together and treat them as separate nodes. If a word is not found in the dictionary then this code block is executed to check if the word might consist of more than one word. The two new words must make use of all the characters of the old word. See algorithm \ref{Find words written together algorithm} for the algorithm used for this improvement.
 
 \begin{algorithm}
 \caption{Find words written together}
