--- a/REST API Report/Introduction.tex
+++ b/REST API Report/Introduction.tex
@@ -194,7 +194,7 @@ No studies were found that are about this specific topic, i.e., if there is a re
 \subsection{Problem formulation}
 The aim of this study is to investigate if there is relation between  linguistic quality and design quality in widely used REST APIs. Antipatterns which decrease the quality has been detected in earlier research by Palma et al. \cite{linguistic}\cite{design} but finding a relationship between design and linguistic quality has not been done in earlier research. We will use the same rules for detection as described by Palma et al. \cite{linguistic} \cite{design}.
 
-\textcolor{red}{What we mean with quality here is the absence of antipatterns and the presence of recommended patterns. Our aim is to investigate if there is a statistical relation/association between good or bad design quality and good or bad linguistic quality, and vice versa. }
+What we mean with quality here is the absence of antipatterns and the presence of recommended patterns. Our aim is to investigate if there is a statistical relation/association between good or bad design quality and good or bad linguistic quality, and vice versa. 
 
 \subsection{Motivation}
 Currently, there are numerous APIs available ranging from all kinds of categories imaginable. With this huge diversity, there is a need for standardization to make the developers recognize how to use each API. APIs that are not following the standard might be difficult to understand and developers might choose other APIs that do follow the standard.
@@ -264,5 +264,4 @@ This study is aimed to support the developers of REST APIs so they can develop A
 \item \textbf{Chapter 7} summarizes the result of the research done and draw conclusions based on it. Outline future work and validity of result.
 \end{itemize}
 
-\clearpage
 \newpage
