--- a/REST API Report/Report.tex
+++ b/REST API Report/Report.tex
@@ -20,6 +20,8 @@
 \algnewcommand\And{\textbf{ and } }
 \algnewcommand\Or{\textbf{ or } }
 \algnewcommand\ArrowFunction{\textbf{ => } }
+\usepackage{chngcntr}
+\counterwithin{table}{section}
 \usepackage[T1]{fontenc}
 \usepackage{times}
 \usepackage[english]{babel}
