--- a/REST API Report/Results.tex
+++ b/REST API Report/Results.tex
@@ -1,6 +1,6 @@
 \section{Results}
 
-\textcolor{red}{We ran our detection tools on 326 endpoints. Table \ref{tab:Design antipatterns found} shows the amount and rounded percentages of detected design antipatterns. Table \ref{tab:Linguistic antipatterns found} shows the amount and rounded percentages of detected linguistic antipatterns.}
+We ran our detection tools on 326 endpoints. Table \ref{tab:Design antipatterns found} shows the amount and rounded percentages of detected design antipatterns. Table \ref{tab:Linguistic antipatterns found} shows the amount and rounded percentages of detected linguistic antipatterns.
 
 \begin{table}[htb!]
     \centering
@@ -65,7 +65,7 @@ Examples of results of antipatterns and patterns found in two of our APIs Twitte
 
 \subsection{Design antipattern examples}
 
-\textcolor{red}{Table \ref{tab:Examples of findings of the design antipattern Breaking Self-Descriptiveness} shows examples of headers found to be non-standard and thus considered to have the design antipattern Breaking Self-descriptiveness, one for each API is shown. }
+Table \ref{tab:Examples of findings of the design antipattern Breaking Self-Descriptiveness} shows examples of headers found to be non-standard and thus considered to have the design antipattern Breaking Self-descriptiveness, one for each API is shown.
 
 \begin{table}[htb!]
     \centering
@@ -89,7 +89,7 @@ Examples of results of antipatterns and patterns found in two of our APIs Twitte
 
 \subsection{Linguistic antipattern examples}
 
-\textcolor{red}{Table \ref{tab:Examples of linguistic antipatterns found.} shows examples of linguistic antipatterns found, one per API the antipattern was detected in. After manual review of the detected Contextless Resource Names, we deem that many of them are not actually contextless, many of them can be considered contextual with knowledge of the purpose, content and context of that particular API. Among the examples of detected Contextless Resource Names that are listed in table \ref{tab:Examples of linguistic antipatterns found.}, those that we deem clearly incorrectly identified as context less are particularly the examples for Bitly, Facebook, GitHub, Imgur, Spotify, StackExchange, Twitter and Vimeo. These are not the only endpoints identified as Contextless Resource Names that we deem have been incorrectly identified, these are just some examples. }
+Table \ref{tab:Examples of linguistic antipatterns found.} shows examples of linguistic antipatterns found, one per API the antipattern was detected in. After manual review of the detected Contextless Resource Names, we deem that many of them are not actually contextless, many of them can be considered contextual with knowledge of the purpose, content and context of that particular API. Among the examples of detected Contextless Resource Names that are listed in table \ref{tab:Examples of linguistic antipatterns found.}, those that we deem clearly incorrectly identified as context less are particularly the examples for Bitly, Facebook, GitHub, Imgur, Spotify, StackExchange, Twitter and Vimeo. These are not the only endpoints identified as Contextless Resource Names that we deem have been incorrectly identified, these are just some examples.
 
 \begin{table}[htb!]
     \centering
@@ -98,8 +98,8 @@ Examples of results of antipatterns and patterns found in two of our APIs Twitte
         API & linguistic antipattern & endpoint \\ \hline
         Disqus & CRUDy URIs & /users/updateProfile.json \\  \hline
         Twitter & CRUDy URIs & /statuses/update \\ \hline
-        Nasa & CRUDy URIs & \textcolor{red}{/search} \\  \hline
-        Spotify & CRUDy URIs & \textcolor{red}{/search} \\  \hline
+        Nasa & CRUDy URIs & /search \\  \hline
+        Spotify & CRUDy URIs & /search \\  \hline
         Disqus & Amorphous URIs & /threads/create.json \\ \hline
         Bitly & Contextless Resource Names & /bitlinks/{BITLINK}/clicks \\ \hline
         Facebook & Contextless Resource Names & /\{user-id\}/taggable\_friends \\ \hline
@@ -117,9 +117,7 @@ Examples of results of antipatterns and patterns found in two of our APIs Twitte
     \label{tab:Examples of linguistic antipatterns found.}
 \end{table}
 
-\textcolor{red}{
 Table \ref{tab:Examples of Pluralised Nodes found.} shows some examples of endpoints where the linguistic antipattern Pluralised Nodes was identified that we deem to have been identified correctly. However, table \ref{tab:Examples of manually determined incorrect detection results of Pluralised Nodes found.} shows two examples of identified Pluralised Nodes that we (after manual review) deem to have been incorrectly identified as such, the last nodes in those, "bitlinks" and "projects" are clearly plural and not singular which is what the SARA program has identified them as.
-}
 
 \begin{table}[htb!]
     \centering
@@ -145,9 +143,7 @@ Table \ref{tab:Examples of Pluralised Nodes found.} shows some examples of endpo
     \label{tab:Examples of manually determined incorrect detection results of Pluralised Nodes found.}
 \end{table}
 
-\textcolor{red}{
 Table \ref{tab:Examples of manually determined incorrect detection results of Verbless URIs pattern found} shows some examples of endpoints from the Disqus API that the SARA program identified as having the linguistic pattern Verbless URIs. However, after manual review, we deem that they clearly have the antipattern CRUDy URIs. This is because they contain the terms create and update, signaling actions that should not depend on such terms in the URI nodes but instead on the HTTP method used \cite{linguistic}. As seen in table \ref{tab:Examples of linguistic antipatterns found.}, the SARA program did successfully identify one of the URIs from Disqus as CRUDy, but the ones in table \ref{tab:Examples of manually determined incorrect detection results of Verbless URIs pattern found} were missed for reasons we do not know, we will discuss the implication of this and the other flaws later in the report.
-}
 
 \begin{table}[]
     \centering
@@ -161,7 +157,7 @@ Table \ref{tab:Examples of manually determined incorrect detection results of Ve
     \label{tab:Examples of manually determined incorrect detection results of Verbless URIs pattern found}
 \end{table}
 
-\textcolor{red}{Included with the submission of this report will be a json file called full-data.json. In full-data.json, all endpoints used for this research are listed with boolean properties for all patterns and antipatterns, showing true if the (anti)pattern has been detected and false if not. All non-standard headers detected are also listed for each endpoint in full-data.json.}
+Included with the submission of this report will be a json file called full-data.json. In full-data.json, all endpoints used for this research are listed with boolean properties for all patterns and antipatterns, showing true if the (anti)pattern has been detected and false if not. All non-standard headers detected are also listed for each endpoint in full-data.json.
 
 \clearpage
 
@@ -548,5 +544,4 @@ Content Negotiation vs Pluralised Nodes & 0.0985
 
 The result of Table \ref{tab:Designpatternsvslinguisticantipatterns} indicates a weak positive relation between the  Content Negotiation design pattern and the  Amorphous URIs linguistic antipattern.
 
-\clearpage
 \newpage
